--- a/terminal.html
+++ b/terminal.html
@@ -25,7 +25,7 @@ body {
 	width:100%;
 }
 PRE {
-	/*display:inline;*/
+/*	display:inline;*/
 }
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
@@ -46,7 +46,7 @@ function x() {
 $(window).keypress(function(p) {
 //	print("keypress");
 //	console.log(p);
-	print(p.which);
+	//print(p.which);
 	sendToInput(p.which);
 //	sendToInput("ls\n");
 });
