esc fixes; cursor style

--- a/terminal.html
+++ b/terminal.html
@@ -72,10 +72,11 @@ body {
 #cursor {
 	position:fixed;
 	left:0px;top:0px;
-	background:green;
+	background:#60ff60;
 	color:green;
 	width:10px;
 	height:10px;
+	opacity:0.5;
 }
 
 table tr.odd {
