--- a/terminal.html
+++ b/terminal.html
@@ -149,16 +149,16 @@ $(document).ready(function() {
 	$('#singleChar').remove();
 	terminal.init();
 	terminal.setSize($(window).width(), $(window).height());
-
 	$('#cursor').css('width',terminal.charW+"px").css('height',terminal.charH+"px");
-
+	
+	$(window).resize();
 });
 $(window).resize(function() {
 	var w= $(window).width();
 	var h= $(window).height();
-	terminal.setSize(w*1-20, h*1-10);
 	$('BODY').css('width',w+"px").css('height',h+"px");
 	$('#main').css('width',w+"px").css('height',h+"px");
+	terminal.setSize(w*1-20, h*1-10);
 });
 
 
