--- a/terminal.html
+++ b/terminal.html
@@ -89,6 +89,7 @@ table tr.odd {
 <script type="text/javascript" src="esc_map.js"></script>
 <script type="text/javascript" src="terminal.js"></script>
 <script type="text/javascript" src="keyboard.js"></script>
+<script type="text/javascript" src="smoothie.js"></script>
 <script>
 
 var data_prev = '';
